better way to do dll (string module)

--- a/scilab/modules/string/Makefile.am
+++ b/scilab/modules/string/Makefile.am
@@ -112,6 +112,7 @@ includes/stricmp.h includes/strsubst.h \
 includes/code2str.h \
 includes/NumTokens.h \
 includes/StringConvert.h \
-includes/scistrtostr.h
+includes/scistrtostr.h \
+includes/dynlib_string.h
 
 include $(top_srcdir)/Makefile.incl.am
