--- a/scilab/modules/localization/Makefile.in
+++ b/scilab/modules/localization/Makefile.in
@@ -426,7 +426,8 @@ includes/gw_localization.h \
 includes/InitializeLocalization.h \
 includes/setgetlanguage.h \
 includes/TerminateLocalization.h \
-includes/charEncoding.h
+includes/charEncoding.h \
+includes/dynlib_localization.h
 
 @GUI_TRUE@USEANT = 1
 
