--- a/scilab/modules/output_stream/Makefile.in
+++ b/scilab/modules/output_stream/Makefile.in
@@ -490,7 +490,8 @@ includes/basout.h \
 includes/msgs.h \
 includes/sciprint_full.h \
 includes/do_xxprintf.h \
-includes/gw_output_stream.h
+includes/gw_output_stream.h \
+includes/dynlib_output_stream.h
 
 
 # Where all the Scilab stuff is installed (macros, help, ...)
