--- a/scilab/modules/polynomials/Makefile.in
+++ b/scilab/modules/polynomials/Makefile.in
@@ -518,7 +518,9 @@ libscipolynomials_la_sci_gateway_DATA = sci_gateway/polynomials_gateway.xml
 
 #### polynomials : include files ####
 libscipolynomials_la_includedir = $(pkgincludedir)/polynomials
-libscipolynomials_la_include_HEADERS = includes/gw_polynomials.h
+libscipolynomials_la_include_HEADERS = includes/gw_polynomials.h \
+includes/dynlib_polynomials.h
+
 
 # Where all the Scilab stuff is installed (macros, help, ...)
 mydatadir = $(pkgdatadir)/modules/$(modulename)
