--- a/scilab/modules/randlib/Makefile.in
+++ b/scilab/modules/randlib/Makefile.in
@@ -436,7 +436,8 @@ libscirandlib_la_includedir = $(pkgincludedir)/randlib
 libscirandlib_la_include_HEADERS = includes/grand.h \
 includes/clcg4.h \
 includes/others_generators.h \
-includes/gw_randlib.h
+includes/gw_randlib.h \
+includes/dynlib_randlib.h
 
 
 # Where all the Scilab stuff is installed (macros, help, ...)
