--- a/scilab/modules/string/Makefile.in
+++ b/scilab/modules/string/Makefile.in
@@ -494,7 +494,8 @@ includes/stricmp.h includes/strsubst.h \
 includes/code2str.h \
 includes/NumTokens.h \
 includes/StringConvert.h \
-includes/scistrtostr.h
+includes/scistrtostr.h \
+includes/dynlib_string.h
 
 
 # Where all the Scilab stuff is installed (macros, help, ...)
