--- a/scilab/modules/arnoldi/Makefile.in
+++ b/scilab/modules/arnoldi/Makefile.in
@@ -473,7 +473,9 @@ libsciarnoldi_la_sci_gateway_DATA = sci_gateway/arnoldi_gateway.xml
 
 #### arnoldi : include files ####
 libsciarnoldi_la_includedir = $(pkgincludedir)/arnoldi
-libsciarnoldi_la_include_HEADERS = includes/gw_arnoldi.h
+libsciarnoldi_la_include_HEADERS = includes/gw_arnoldi.h \
+	includes/dynlib_arnoldi.h
+
 
 # Where all the Scilab stuff is installed (macros, help, ...)
 mydatadir = $(pkgdatadir)/modules/$(modulename)
