--- a/scilab/modules/dynamic_link/Makefile.in
+++ b/scilab/modules/dynamic_link/Makefile.in
@@ -435,6 +435,7 @@ libscidynamic_link_la_include_HEADERS = includes/AddFunctionInTable.h \
 includes/addinter.h \
 includes/dynamic_link.h \
 includes/gw_dynamic_link.h \
+includes/dynlib_dynamic_link.h \
 includes/ilib_verbose.h 
 
 
