--- a/scilab/modules/functions/Makefile.in
+++ b/scilab/modules/functions/Makefile.in
@@ -435,7 +435,12 @@ libscifunctions_la_sci_gateway_DATA = sci_gateway/functions_gateway.xml
 
 #### functions : include files ####
 libscifunctions_la_includedir = $(pkgincludedir)/functions
-libscifunctions_la_include_HEADERS = includes/gw_functions.h 
+libscifunctions_la_include_HEADERS = includes/gw_functions.h \
+	includes/librarieslist.h \
+	includes/libraryinfo.h \
+	includes/getmacroslist.h \
+	includes/dynlib_functions.h
+
 
 # Where all the Scilab stuff is installed (macros, help, ...)
 mydatadir = $(pkgdatadir)/modules/$(modulename)
