--- a/scilab/modules/graphic_export/Makefile.in
+++ b/scilab/modules/graphic_export/Makefile.in
@@ -485,16 +485,7 @@ libscigraphic_export_la_sci_gateway_DATA = sci_gateway/graphic_export_gateway.xm
 #### graphic_export : include files ####
 libscigraphic_export_la_includedir = $(pkgincludedir)/graphic_export
 libscigraphic_export_la_include_HEADERS = includes/gw_graphic_export.h \
-includes/sci_xs2ppm.h \
-includes/sci_xs2gif.h \
-includes/xs2file.h \
-includes/sci_xs2bmp.h \
-includes/sci_xs2ps.h \
-includes/sci_xs2eps.h \
-includes/sci_xs2jpg.h \
-includes/sci_xs2pdf.h \
-includes/sci_xs2png.h \
-includes/sci_xs2svg.h
+includes/dynlib_grahic_export.h
 
 
 # Where all the Scilab stuff is installed (macros, help, ...)
