--- a/scilab/modules/history_manager/Makefile.in
+++ b/scilab/modules/history_manager/Makefile.in
@@ -479,7 +479,8 @@ libscihistory_manager_la_includedir = $(pkgincludedir)/history_manager
 libscihistory_manager_la_include_HEADERS = includes/gw_history_manager.h \
 includes/HistoryManager.h \
 includes/InitializeHistoryManager.h \
-includes/TerminateHistoryManager.h
+includes/TerminateHistoryManager.h \
+includes/dynlib_history_manager.h
 
 
 #### SWIG Declaration ####
