--- a/scilab/modules/io/Makefile.in
+++ b/scilab/modules/io/Makefile.in
@@ -465,7 +465,8 @@ libsciio_la_includedir = $(pkgincludedir)/io
 libsciio_la_include_HEADERS = includes/gw_io.h \
 includes/getenvc.h \
 includes/setenvc.h \
-includes/GetenvB.h
+includes/GetenvB.h \
+includes/dynlib_io.h
 
 
 # Where all the Scilab stuff is installed (macros, help, ...)
