--- a/scilab/modules/metanet/Makefile.in
+++ b/scilab/modules/metanet/Makefile.in
@@ -531,7 +531,9 @@ libscimetanet_la_sci_gateway_DATA = sci_gateway/metanet_gateway.xml
 
 #### metanet : include files ####
 libscimetanet_la_includedir = $(pkgincludedir)/metanet
-libscimetanet_la_include_HEADERS = includes/gw_metanet.h
+libscimetanet_la_include_HEADERS = includes/gw_metanet.h \
+includes/dynlib_metanet.h
+
 
 #### metanet : Macros ####
 MACROSDIRSEXT = macros/editor macros/graph_tools
