--- a/scilab/modules/pvm/Makefile.in
+++ b/scilab/modules/pvm/Makefile.in
@@ -206,7 +206,7 @@ libscipvm_la_sci_gatewayDATA_INSTALL = $(INSTALL_DATA)
 DATA = $(libscipvm_la_etc_DATA) $(libscipvm_la_root_DATA) \
 	$(libscipvm_la_sci_gateway_DATA)
 am__libscipvm_la_include_HEADERS_DIST = includes/gw_pvm.h \
-	includes/with_pvm.h
+	includes/with_pvm.h includes/dynlib_pvm.h
 libscipvm_la_includeHEADERS_INSTALL = $(INSTALL_HEADER)
 HEADERS = $(libscipvm_la_include_HEADERS)
 ETAGS = etags
@@ -527,7 +527,8 @@ top_srcdir = @top_srcdir@
 #### pvm : include files ####
 @PVM_TRUE@libscipvm_la_includedir = $(pkgincludedir)/pvm
 @PVM_TRUE@libscipvm_la_include_HEADERS = includes/gw_pvm.h \
-@PVM_TRUE@includes/with_pvm.h
+@PVM_TRUE@includes/with_pvm.h \
+@PVM_TRUE@includes/dynlib_pvm.h
 
 
 # Where all the Scilab stuff is installed (macros, help, ...)
