--- a/scilab/modules/shell/Makefile.in
+++ b/scilab/modules/shell/Makefile.in
@@ -453,7 +453,8 @@ includes/PutChar.h \
 includes/tohome.h \
 includes/zzledt.h \
 includes/prompt.h \
-includes/promptecho.h
+includes/promptecho.h \
+includes/dynlib_shell.h
 
 @GUI_TRUE@USEANT = 1
 
