--- a/scilab/modules/statistics/Makefile.in
+++ b/scilab/modules/statistics/Makefile.in
@@ -490,7 +490,10 @@ libscistatistics_la_sci_gateway_DATA = sci_gateway/statistics_gateway.xml
 
 #### statistics : include files ####
 libscistatistics_la_includedir = $(pkgincludedir)/statistics
-libscistatistics_la_include_HEADERS = includes/gw_statistics.h
+libscistatistics_la_include_HEADERS = includes/gw_statistics.h \
+includes/dynlib_statistics.h \
+includes/ipmpar1.h
+
 
 # Where all the Scilab stuff is installed (macros, help, ...)
 mydatadir = $(pkgdatadir)/modules/$(modulename)
