--- a/scilab/modules/symbolic/Makefile.in
+++ b/scilab/modules/symbolic/Makefile.in
@@ -405,7 +405,9 @@ libscisymbolic_la_sci_gateway_DATA = sci_gateway/symbolic_gateway.xml
 
 #### symbolic : include files ####
 libscisymbolic_la_includedir = $(pkgincludedir)/symbolic
-libscisymbolic_la_include_HEADERS = includes/gw_symbolic.h
+libscisymbolic_la_include_HEADERS = includes/gw_symbolic.h \
+includes/dynlib_symbolic.h
+
 
 # Where all the Scilab stuff is installed (macros, help, ...)
 mydatadir = $(pkgdatadir)/modules/$(modulename)
