--- a/scilab/modules/tclsci/Makefile.in
+++ b/scilab/modules/tclsci/Makefile.in
@@ -642,10 +642,10 @@ includes/TCL_Global.h \
 includes/ScilabEval.h \
 includes/gw_tclsci.h \
 includes/InitializeTclTk.h \
-includes/sci_TCL_SetVar.h \
 includes/TerminateTclTk.h \
 includes/GlobalTclInterp.h \
-includes/withtk.h
+includes/withtk.h \
+includes/dynlib_tclsci.h
 
 
 # Where all the Scilab stuff is installed (macros, help, ...)
