add include path

--- a/scilab/modules/optimization/Makefile.in
+++ b/scilab/modules/optimization/Makefile.in
@@ -533,7 +533,7 @@ libscioptimization_la_sci_gateway_DATA = sci_gateway/optimization_gateway.xml
 libscioptimization_la_includedir = $(pkgincludedir)/optimization
 libscioptimization_la_include_HEADERS = includes/gw_optimization.h \
 includes/dynlib_optimization.h \
-includes/sp.h 
+includes/spd.h 
 
 
 # Where all the Scilab stuff is installed (macros, help, ...)
