elem_fun sas (matrix, maxi, mini, number_properties, ones, size, sqrt, sum, tan testmatrix)

--- a/scilab/modules/types/types.vcproj
+++ b/scilab/modules/types/types.vcproj
@@ -440,7 +440,15 @@
 			>
 		</Filter>
 		<File
+			RelativePath="..\..\bin\abstractSyntaxTree.lib"
+			>
+		</File>
+		<File
 			RelativePath="..\..\bin\lapack.lib"
+			>
+		</File>
+		<File
+			RelativePath="..\..\bin\symbol.lib"
 			>
 		</File>
 	</Files>
