fix noumfpack include path

--- a/scilab/modules/umfpack/Makefile.am
+++ b/scilab/modules/umfpack/Makefile.am
@@ -85,6 +85,7 @@ UMFPACK_C_SOURCES = src/noumfpack/noumfpack.c
 
 libsciumfpack_la_SOURCES = $(UMFPACK_C_SOURCES)
 libsciumfpack_la_CFLAGS= -I$(top_srcdir)/modules/api_scilab/includes \
+-I$(top_srcdir)/modules/umfpack/includes/ \
 -I$(top_srcdir)/modules/output_stream/includes
 endif
 
