move types dll to static, move YaspWrite functions to output_stream

--- a/scilab/modules/output_stream/src/c/output_stream.vcproj
+++ b/scilab/modules/output_stream/src/c/output_stream.vcproj
@@ -461,6 +461,10 @@
 				RelativePath=".\set_xxprintf.c"
 				>
 			</File>
+			<File
+				RelativePath="..\cpp\yaspio.cpp"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
