--- a/scilab/modules/symbol/symbol.vcproj
+++ b/scilab/modules/symbol/symbol.vcproj
@@ -385,6 +385,10 @@
 			RelativePath="..\..\bin\lapack.lib"
 			>
 		</File>
+		<File
+			RelativePath="..\..\libs\types.lib"
+			>
+		</File>
 	</Files>
 	<Globals>
 	</Globals>
